--- a/Main/index.html
+++ b/Main/index.html
@@ -1,63 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>5 Day Weather Forecast</title>
-  <link rel="stylesheet" href="./styles/styles.css" />
-</head>
-<body>
-  <header class="weather-header">
-    <h1>Weather Report</h1>
-  </header>
-  <div class="container-fluid">
-    <div class="row">
-      <aside class="col-3">
-        <h2 class="search-text">Search for a city</h2>
-        <form id="search" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="Minneapolis" aria-labelledby="form-heading" aria-controls="today forecast">
-                <div class="input-group-append">
-                  <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                    Search
-                  </button>
-                  <hr class="hr"/>
-                </div>
-            </div>
-          </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Weather Dashboard</title>
+  </head>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <body>
+    <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
+      <h1>Weather Dashboard</h1>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3">
+          <h2 class="h3">Search for a City:</h2>
+          <form id="search-form" class="form">
+            <input type="text" id="search-input" placeholder="Enter city name" />
+            <button type="submit" class="btn search-button">Search</button>
+          </form>
+          <div class="list-group" id="history"></div>
+        </div>
+        <div class="col-lg-9">
+          <section id="today"></section>
+          <section id="forecast" class="row"></section>
+        </div>
+      </div>
     </div>
-  </div>
-  <script
-  src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"
-  integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg=="
-  crossorigin="anonymous"></script>
-<script 
-  src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/plugin/utc.min.js" 
-  integrity="sha512-m00bfmYnAl3plEBlQfeQUhw/U2uvmw29V2+jxSWpAjankMWS+zAsjezbKWDEJNXqWq9o9qQZSOiA2RKDpa4D5w==" 
-  crossorigin="anonymous"></script>
-<script 
-  src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/plugin/timezone.min.js" 
-  integrity="sha512-pslqxxHAYPCxaSeFSmXXxDkLejD5dbFVC66aiVq0z4v7VTJBU+wqcG1OpNh4p3MjS2D6NCwz/H2QmSc7dXxryg==" 
-  crossorigin="anonymous"></script>
-<script src="script.js"></script>
-</body>
-</html>
+    <script src="./scripts.js"></script>
+  </body>
+  </html>
